# Learn-OpenGL

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  toolchain.cmake
.github/workflows/: build-for-linux.yml  build-for-windows.yml
include/glad/: gl.h  glad.h  vulkan.h
include/input/: input.h  mouse.h
include/models/: cube.h
include/shaders/: compiler.hpp
include/texture/: loader.hpp
include/time/: delta_time.hpp
include/window/: resize.h
include/windows/: main.hpp
shaders/: shader.vert
src/: .gitignore  glad.c  main.cpp  vulkan.c
src/input/: input.c  mouse.c
src/shaders/: compiler.cpp  shader.frag  shader.vert  triang_shader.vert
src/texture/: loader.cpp
src/time/: delta_time.cpp
src/window/: resize.c
src/windows/: main.cpp
